[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/swim obstacle.gd" type="Script" id=1]
[ext_resource path="res://assets/obstacle.png" type="Texture" id=2]

[node name="swim_obstacle" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.35 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="Bottom2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -740.897, -498.468 )
polygon = PoolVector2Array( 252.488, 533.85, 322.678, 370.39, 431.101, 371.213, 433.907, 291.037, 509.674, 287.83, 512.48, 209.258, 891.311, 212.465, 891.311, 154.738, 917.969, 154.738, 1125.22, 411.255, 1350.36, 497.525, 1126.55, 588.336, 1093.35, 865.097, 770.897, 864.182, 770.897, 961.325, 710.897, 964.182, 710.897, 987.039, 665.897, 987.039, 665.897, 961.325, 490.897, 961.325, 487.224, 764.075, 447.938, 764.075, 445.132, 664.657, 376.381, 666.26 )
__meta__ = {
"_edit_group_": true
}

[node name="Top2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0, 195.95 )
scale = Vector2( 1, 1.34975 )
polygon = PoolVector2Array( 17.5, -509.264, 160, -509.264, 160, -452.11, 232.5, -449.993, 233.7, -178.157, 342.835, -180.703, 340.608, -201.066, 507.651, -199.793, 506.472, -145.876, 592.5, -130.357, 405, 60.154, -392.5, 60.154, -527.5, -134.591, -462.5, -185.394, -370, -185.394, -370, -746.345, -320, -746.345, -323.112, -190.884, -189.477, -188.339, -190, -452.11, 17.5, -454.227 )
__meta__ = {
"_edit_group_": true
}

[node name="Middle2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -1051.12, -410.838 )
polygon = PoolVector2Array( 664.135, 282.008, 661.326, 521.737, 857.979, 520.667, 856.106, 581.669, 1199.78, 582.739, 1198.84, 640.531, 1226.94, 638.391, 1228.62, 519.409, 1407.67, 520.667, 1410.48, 280.937, 1303.73, 277.727, 1304.66, 212.443, 787.746, 210.303, 789.619, 282.008 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="Bottom" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -740.897, -498.468 )
polygon = PoolVector2Array( 252.488, 533.85, 322.678, 370.39, 431.101, 371.213, 433.907, 291.037, 509.674, 287.83, 512.48, 209.258, 891.311, 212.465, 891.311, 154.738, 917.969, 154.738, 1125.22, 411.255, 1350.36, 497.525, 1126.55, 588.336, 1093.35, 865.097, 770.897, 864.182, 770.897, 961.325, 710.897, 964.182, 710.897, 987.039, 665.897, 987.039, 665.897, 961.325, 490.897, 961.325, 487.224, 764.075, 447.938, 764.075, 445.132, 664.657, 376.381, 666.26 )
__meta__ = {
"_edit_group_": true
}

[node name="bottom" type="Sprite" parent="Area2D/Bottom"]
position = Vector2( 750.264, 516.65 )
scale = Vector2( 1.08056, 0.423413 )
texture = ExtResource( 2 )

[node name="obstacle6" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -21.548, -191.838 )
scale = Vector2( 0.780977, 1 )
texture = ExtResource( 2 )

[node name="obstacle7" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -130.102, -550.708 )
scale = Vector2( 0.256325, 0.497914 )
texture = ExtResource( 2 )

[node name="obstacle9" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -111.274, 403.648 )
scale = Vector2( 0.498731, 0.497914 )
texture = ExtResource( 2 )

[node name="obstacle10" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( 251.648, 549.453 )
scale = Vector2( 0.192435, 0.744543 )
texture = ExtResource( 2 )

[node name="obstacle14" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -56.9503, 1043.06 )
scale = Vector2( 0.0593872, 0.196494 )
texture = ExtResource( 2 )

[node name="obstacle11" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -111.274, 781.041 )
scale = Vector2( 0.370951, 0.779088 )
texture = ExtResource( 2 )

[node name="obstacle8" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( 143.922, -691.884 )
scale = Vector2( 0.0367789, 0.497914 )
texture = ExtResource( 2 )

[node name="obstacle3" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -311.235, 155.719 )
rotation = 5.93412
scale = Vector2( 0.28765, 0.495411 )
texture = ExtResource( 2 )

[node name="obstacle12" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( -330.052, -142.201 )
rotation = 3.31613
scale = Vector2( 0.28765, 0.564244 )
texture = ExtResource( 2 )

[node name="obstacle13" type="Sprite" parent="Area2D/Bottom/bottom"]
position = Vector2( 310.758, -49.1296 )
rotation = 0.785398
scale = Vector2( 0.515899, 0.479683 )
texture = ExtResource( 2 )

[node name="Top" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, 195.95 )
scale = Vector2( 1, 1.34975 )
polygon = PoolVector2Array( 17.5, -509.264, 160, -509.264, 160, -452.11, 232.5, -449.993, 233.7, -178.157, 342.835, -180.703, 340.608, -201.066, 507.651, -199.793, 506.472, -145.876, 592.5, -130.357, 405, 60.154, -392.5, 60.154, -527.5, -134.591, -462.5, -185.394, -370, -185.394, -370, -746.345, -320, -746.345, -323.112, -190.884, -189.477, -188.339, -190, -452.11, 17.5, -454.227 )
__meta__ = {
"_edit_group_": true
}

[node name="top" type="Sprite" parent="Area2D/Top"]
position = Vector2( -0.00694275, -60.3939 )
scale = Vector2( 1, 0.346702 )
texture = ExtResource( 2 )

[node name="obstacle" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( -330.396, 29.8985 )
rotation = 1.33264
scale = Vector2( 0.834756, 0.387114 )
texture = ExtResource( 2 )

[node name="obstacle3" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 338.811, 12.648 )
rotation = 1.90453
scale = Vector2( 0.835777, 0.491365 )
texture = ExtResource( 2 )

[node name="obstacle2" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( -385.627, -245.026 )
scale = Vector2( 0.224489, 0.330808 )
texture = ExtResource( 2 )

[node name="obstacle4" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 425.841, -255.408 )
scale = Vector2( 0.239304, 0.420963 )
texture = ExtResource( 2 )

[node name="obstacle5" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 23.1711, -724.819 )
scale = Vector2( 0.610628, 1.18993 )
texture = ExtResource( 2 )

[node name="obstacle7" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 87.786, -1100 )
scale = Vector2( 0.204068, 0.55498 )
texture = ExtResource( 2 )

[node name="obstacle8" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( 6.00415, 303.145 )
scale = Vector2( 1.15486, 0.118446 )
texture = ExtResource( 2 )

[node name="obstacle6" type="Sprite" parent="Area2D/Top/top"]
position = Vector2( -345.319, -1127.58 )
scale = Vector2( 0.0753245, 2.46287 )
texture = ExtResource( 2 )

[node name="Middle" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -1051.12, -410.838 )
polygon = PoolVector2Array( 664.135, 282.008, 661.326, 521.737, 857.979, 520.667, 856.106, 581.669, 1199.78, 582.739, 1198.84, 640.531, 1226.94, 638.391, 1228.62, 519.409, 1407.67, 520.667, 1410.48, 280.937, 1303.73, 277.727, 1304.66, 212.443, 787.746, 210.303, 789.619, 282.008 )
__meta__ = {
"_edit_group_": true
}

[node name="middle" type="Sprite" parent="Area2D/Middle"]
position = Vector2( 1036.85, 399.145 )
scale = Vector2( 1.08056, 0.346773 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="obstacle6" type="Sprite" parent="Area2D/Middle/middle"]
position = Vector2( 9.61519, -191.838 )
scale = Vector2( 0.69078, 1 )
texture = ExtResource( 2 )

[node name="obstacle7" type="Sprite" parent="Area2D/Middle/middle"]
position = Vector2( -76.9182, 345.746 )
scale = Vector2( 0.256325, 0.497914 )
texture = ExtResource( 2 )

[node name="obstacle8" type="Sprite" parent="Area2D/Middle/middle"]
position = Vector2( 163.345, 510.291 )
scale = Vector2( 0.0367789, 0.497914 )
texture = ExtResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
